# wideq

./: README.md  example.py  pyproject.toml  setup.py  wideq_list.txt
wideq/: __init__.py  ac.py  client.py  dehum.py  dishwasher.py  dryer.py  util.py  washer.py
