[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "wideq"
author = "gugu927"
author-email = "kimcg0927@gmail.com"
home-page = "https://github.com/gugu927/wideq"
requires = [
    "requests"
]
description-file = "README.md"
requires-python = ">=3.5"
[tool.flit.metadata.requires-extra]
test = [
    "responses"
]
